--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <ul class="menu">
             <li class="menu-item">
               <a class="menu-link" href="./index.html">
-                <span class="text-background">Studio</span></a
+                <span class="text-background under-line">Studio</span></a
               >
             </li>
             <li class="menu-item">
@@ -61,7 +61,7 @@
     <main class="page-main">
       <!-- =============== HERO =========== -->
       <section class="section-first">
-        <div class="container section-first-container">
+        <div class="container section-first-container background">
           <h1 class="heading-first">Effective Solutions for Your Business</h1>
           <button class="order-service-btn" type="button">Order Service</button>
         </div>
@@ -73,6 +73,9 @@
           <h2 class="visually-hidden">Our benefits</h2>
           <ul class="page-list list-benefits">
             <li class="page-item benefits-item">
+              <svg class="benefit-icon" width="264" height="112">
+                <use href="./images/icons/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="heading-third benefits-title">Strategy</h3>
               <p class="paragraph-text">
                 Our goal is to identify the business problem to walk away with
@@ -80,6 +83,9 @@
               </p>
             </li>
             <li class="page-item benefits-item">
+              <svg class="benefit-icon" width="264" height="112">
+                <use href="./images/icons/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="heading-third benefits-title">Punctuality</h3>
               <p class="paragraph-text">
                 Bring the key message to the brand's audience for the best price
@@ -87,6 +93,9 @@
               </p>
             </li>
             <li class="page-item benefits-item">
+              <svg class="benefit-icon" width="264" height="112">
+                <use href="./images/icons/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="heading-third benefits-title">Diligence</h3>
               <p class="paragraph-text">
                 Research and confirm brands that present the strongest digital
@@ -94,6 +103,9 @@
               </p>
             </li>
             <li class="page-item benefits-item">
+              <svg class="benefit-icon" width="264" height="112">
+                <use href="./images/icons/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="heading-third benefits-title">Technologies</h3>
               <p class="paragraph-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -121,6 +133,47 @@
                 <h3 class="heading-third title-team">Mark Guerrero</h3>
                 <p class="paragraph-text text-position">Product Designer</p>
               </div>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-instagram"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="../images/icons/icons.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="#" class="social-list-link social-list-link-twitter">
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-facebook"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-linkedin"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="page-item team-item">
               <img
@@ -133,6 +186,47 @@
                 <h3 class="heading-third title-team">Tom Ford</h3>
                 <p class="paragraph-text text-position">Frontend Developer</p>
               </div>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-instagram"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="../images/icons/icons.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="#" class="social-list-link social-list-link-twitter">
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-facebook"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-linkedin"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="page-item team-item">
               <img
@@ -145,6 +239,47 @@
                 <h3 class="heading-third title-team">Camila Garcia</h3>
                 <p class="paragraph-text text-position">Marketing</p>
               </div>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-instagram"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="../images/icons/icons.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="#" class="social-list-link social-list-link-twitter">
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-facebook"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-linkedin"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="page-item team-item">
               <img
@@ -157,6 +292,47 @@
                 <h3 class="heading-third title-team">Daniel Wilson</h3>
                 <p class="paragraph-text text-position">UI Designer</p>
               </div>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-instagram"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use
+                        href="../images/icons/icons.svg#icon-instagram"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="#" class="social-list-link social-list-link-twitter">
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-facebook"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a
+                    href="#"
+                    class="social-list-link social-list-link-linkedin"
+                  >
+                    <svg class="social-list-icon" width="16" height="16">
+                      <use href="../images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -253,6 +429,37 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <ul class="social-list list">
+          <li class="social-list-item">
+            <p class="text-links">Social media</p>
+            <a href="#" class="social-list-link social-list-link-instagram">
+              <svg class="social-list-icon" width="24" height="24">
+                <use href="../images/icons/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="#" class="social-list-link social-list-link-twitter">
+              <svg class="social-list-icon" width="24" height="24">
+                <use href="../images/icons/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="#" class="social-list-link social-list-link-facebook">
+              <svg class="social-list-icon" width="24" height="24">
+                <use href="../images/icons/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="#" class="social-list-link social-list-link-linkedin">
+              <svg class="social-list-icon" width="24" height="24">
+                <use href="../images/icons/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
