--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="menu">
             <li class="menu-item">
-              <a class="menu-link" href="./index.html">
+              <a class="menu-link studio-link" href="./index.html">
                 <span class="text-background under-line">Studio</span></a
               >
             </li>
@@ -143,40 +143,28 @@
 
                 <ul class="social-list">
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-instagram"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-twitter"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-facebook"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-linkedin"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -198,40 +186,28 @@
 
                 <ul class="social-list">
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-instagram"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-twitter"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-facebook"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-linkedin"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -253,40 +229,28 @@
 
                 <ul class="social-list">
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-instagram"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-twitter"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-facebook"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-linkedin"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -308,40 +272,28 @@
 
                 <ul class="social-list">
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-instagram"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-twitter"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-facebook"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a
-                      href="#"
-                      class="social-list-link social-list-link-linkedin"
-                    >
+                    <a href="#" class="social-list-link">
                       <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -493,28 +445,28 @@
           <p class="text-links">Social media</p>
           <ul class="social-list links">
             <li class="social-list-item">
-              <a href="#" class="social-list-link social-list-link-instagram">
+              <a href="#" class="social-list-link social-media-list">
                 <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link social-list-link-twitter">
+              <a href="#" class="social-list-link social-media-list">
                 <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link social-list-link-facebook">
+              <a href="#" class="social-list-link social-media-list">
                 <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link social-list-link-linkedin">
+              <a href="#" class="social-list-link social-media-list">
                 <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
